tests/snapshots/run_wpt_conformance__trtx_greater_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater.https.any.js",
    "greater float32 0D scalar",
    "trtx",
    Failed {
        msg: Some(
            "greater :: greater float32 0D scalar: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [1.723199725151062]; inputA: [3.6851015090942383]\n  expected output: [1]\n  actual output: [0]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[];\n    inputB: f32[];\n  }\n\n  nodes {\n    [output] = greater(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
