tests/snapshots/run_wpt_conformance__trtx_greater_float32_5D_tensor_and_broadcastable_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "greater.https.any.js",
    "greater float32 5D tensor and broadcastable 0D scalar",
    "trtx",
    Failed {
        msg: Some(
            "greater :: greater float32 5D tensor and broadcastable 0D scalar: index 6: actual=0 expected=1 tolerance=0\n  inputs: inputB: [2.5]; inputA: [-3.5, -2, -1, 0, 1, 2.5, 3, 4.5, 5, -5.5, 6, -6.5, 7, -7.5, 8, -8.5, 9, 10.5, -11, 12.5, -13, 14.5, -15, 16.5 ...] (len=32)\n  expected output: [0, 0, 0, 0, 0, 0, 1, 1, 1, 0 ...] (len=32)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=32)\n  expected output full nd:\n[0, 0, 0, 0, 0, 0, 1, 1, 1, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[2, 2, 2, 2, 2];\n    inputB: f32[];\n  }\n\n  nodes {\n    [output] = greater(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
